spl2/hn_tests/failing/poly_var1.hn
hnMain = {
	x = print
	voidbind (x 2) (x "aaa")
}